Play nice with SASS @imports
 - Rename dry-animate to _dry-animate as the package can be required
directly from bower_components etc

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "felics <fspoettel@gmail.com>"
   ],
   "description": "DRY .scss version of Animate.css",
-  "main": "./scss/dry-animate.scss",
+  "main": "./scss/_dry-animate.scss",
   "keywords": [
     "scss",
     "animate",
