Add package.json, update deps, don't use ES6 in gulpfile

--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,8 @@
     "animate.css": "~3.2.6",
     "SassyLists": "~2.2.4"
   },
-  "homepage": "https://github.com/felics/dry-animate"
+  "homepage": "https://github.com/felics/dry-animate",
+  "dependencies": {
+    "animate.css": "~3.3.0"
+  }
 }
