--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "/scss/_dry-animate.scss",
   "devDependencies": {
     "gulp": "^3.8.11",
+    "gulp-ruby-sass": "^1.0.5",
     "gulp-sass": "^2.0.1"
   },
   "repository": {
