--- a/bower.json
+++ b/bower.json
@@ -18,8 +18,7 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "test",
-    "tests",
+    "_test",
     "gulpfile.js"
   ],
   "devDependencies": {
